New Achievement System (#106)
Contains the changes in the overworld (backend) for the new achievement,
i.e.,
- add achievements per course
- add dynamic achievements

That is, the following things have been added:
- database migration with liquibase for new schema
- update api urls for achievement related requests
- new achievement creation and update based on current course
configuration
- update of achievements and achievement statistics whenever course
configuration is changed

---------

Co-authored-by: katyaganina <89980843+katyaganina@users.noreply.github.com>